# nonlinear-lodegp-control

./: CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: classsic_mpc_example.py  combined_gp_example.py  combined_posterioir_example.py  diagonal_example.py  equilibrium_example.py  exactLin_example.py  exactLin_example_2.py  feedbackLin_example.py  mixture_elodegp_example.py  mpc_example.py  mpc_example_global.py  se-lodegp_example.py
src/nonlinear_lodegp_control/: __init__.py  combined_gp.py  feedback_linearization.py  gp.py  helpers.py  kernels.py  likelihoods.py  lodegp.py  lodegp_mixture.py  mean_modules.py  mpc.py  plotter.py  subsample.py  warping.py  weighting.py
src/nonlinear_lodegp_control/systems/: __init__.py  inverted_pendulum.py  linearize.py  nonlinear_watertank.py  systems.py
