[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nonlinear_lodegp_control"
version = "0.0.2"
authors = [
  { name="adrianLepp", email="leppadrian@outlook.de" },
]
description = "LODE-GP for control of nonlinear systems"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
    # "sage",
    "torch",
    "gpytorch",
    "matplotlib",
    "numpy",
    "scipy",
    "einops"
]

[project.urls]
Homepage = "https://github.com/adrianLepp/nonlinear-lodegp-control"